# 32.5.1-Film-Info-from-On-line-Cinema

./: CMakeLists.txt  main.cpp
